Install dependencies into this image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,9 @@
 variables:
   DOCKER_DRIVER: overlay2
 
+  HELM_VERSION: 2.14.0
+  KUBERNETES_VERSION: 1.11.10
+
   BUILD_IMAGE_NAME: "$CI_REGISTRY_IMAGE/$CI_COMMIT_REF_SLUG:$CI_COMMIT_SHA"
 
 services:
@@ -16,8 +19,16 @@ build:
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
   script:
-    - docker build --tag "$BUILD_IMAGE_NAME" .
+    - docker build --build-arg "HELM_VERSION=$HELM_VERSION" --build-arg "KUBERNETES_VERSION=$KUBERNETES_VERSION" --tag "$BUILD_IMAGE_NAME" .
     - docker push "$BUILD_IMAGE_NAME"
+
+test_dependencies:
+  stage: test
+  image: "$BUILD_IMAGE_NAME"
+  script:
+    - helm version --client
+    - tiller -version
+    - kubectl version --client
 
 test_kube_domain:
   stage: test
