--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,6 @@ variables:
   KUBERNETES_VERSION: 1.11.10
 
   BUILD_IMAGE_NAME: "$CI_REGISTRY_IMAGE/$CI_COMMIT_REF_SLUG:$CI_COMMIT_SHA"
-  RELEASE_IMAGE_NAME: "$CI_REGISTRY_IMAGE/$CI_COMMIT_REF_SLUG:stable"
 
 stages:
   - build
@@ -195,17 +194,25 @@ test-create-application-secret:
     - kubectl get secrets -n $KUBE_NAMESPACE
     - kubectl get secrets production-secret -n $KUBE_NAMESPACE
 
-release:
+.release:
   stage: release
   image: docker:stable
   services:
     - docker:stable-dind
+  variables:
+    RELEASE_IMAGE_NAME: "$CI_REGISTRY_IMAGE:$CI_JOB_NAME"
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
   script:
     - docker pull "$BUILD_IMAGE_NAME"
     - docker tag "$BUILD_IMAGE_NAME" "$RELEASE_IMAGE_NAME"
     - docker push "$RELEASE_IMAGE_NAME"
+
+12-1-stable:
+  extends: .release
+  
+12-2-stable:
+  extends: .release
 
 before_script:
   - |
