--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,9 @@ build:
 .test-job: &test-job
   stage: test
   image: "$BUILD_IMAGE_NAME"
+  artifacts:
+    paths:
+      - k3s.log
 
 test-shellcheck:
   stage: test
@@ -236,7 +239,7 @@ before_script:
     }
 
     function download_k3s() {
-      wget https://github.com/rancher/k3s/releases/download/v0.5.0/k3s
+      wget https://github.com/rancher/k3s/releases/download/v0.7.0/k3s
       chmod +x k3s
     }
 
