--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -210,8 +210,6 @@ test-create-application-secret:
   image: docker:stable
   services:
     - docker:stable-dind
-  variables:
-    RELEASE_IMAGE_NAME: "$CI_REGISTRY_IMAGE:$CI_JOB_NAME"
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
   script:
@@ -219,13 +217,13 @@ test-create-application-secret:
     - docker tag "$BUILD_IMAGE_NAME" "$RELEASE_IMAGE_NAME"
     - docker push "$RELEASE_IMAGE_NAME"
   only:
-    - master
+    - tags
 
-12-1-stable:
+release-tag:
   extends: .release
-
-12-2-stable:
-  extends: .release
+  variables:
+    # e.g. auto-deploy-image:v1.0.0
+    RELEASE_IMAGE_NAME: "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME"
 
 before_script:
   - |
