--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -241,10 +241,9 @@ release-tag:
     - export ci_image="${CI_REGISTRY_IMAGE}"
     - export ci_image_tag=${CI_COMMIT_TAG:-$CI_COMMIT_SHORT_SHA}
     - echo "Using tag $ci_image_tag for image"
-    - docker build --cache-from ${ci_image}:latest
-      --tag ${ci_image}:$ci_image_tag
-      --tag ${ci_image}:latest
-      -f Dockerfile .
+    - docker pull "$BUILD_IMAGE_NAME"
+    - docker tag "$BUILD_IMAGE_NAME" $ci_image:latest
+    - docker tag "$BUILD_IMAGE_NAME" $ci_image:$ci_image_tag
     - docker push $ci_image:latest
     - docker push $ci_image:$ci_image_tag
   only:
