--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -287,7 +287,7 @@ publish:
   extends: .semantic-release
   only:
     refs:
-      - master
+      - master@gitlab-org/cluster-integration/auto-deploy-image
 
 publish-dryrun:
   extends: .semantic-release
