Pin shellcheck image
The latest image has a bug
https://github.com/koalaman/shellcheck/issues/1751

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,7 @@ build:
 
 test-shellcheck:
   stage: test
-  image: koalaman/shellcheck-alpine
+  image: koalaman/shellcheck-alpine:stable
   script:
     - shellcheck src/bin/auto-deploy
 
