--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,6 +41,9 @@ build:
     - kubectl config set-context k3s --cluster=k3s --user=default
     - kubectl config use-context k3s
     - kubectl version
+    - kubectl apply -f https://raw.githubusercontent.com/rancher/local-path-provisioner/master/deploy/local-path-storage.yaml
+    - |
+        kubectl patch storageclass local-path -p '{"metadata": {"annotations":{"storageclass.kubernetes.io/is-default-class":"true"}}}'
     - |
         function expected_error() {
           echo "Expected error but exited with $?, failing build!"
@@ -205,8 +208,7 @@ test-persist-environment-url:
     - auto-deploy persist_environment_url
     - grep review-app.example.com environment_url.txt
 
-# disabled, k3s does not support helm charts
-.test-deploy:
+test-deploy:
   <<: *test-job
   variables:
     GIT_STRATEGY: none
@@ -218,14 +220,14 @@ test-persist-environment-url:
     CI_PROJECT_VISIBILITY: public
     KUBE_NAMESPACE: default
     KUBE_INGRESS_BASE_DOMAIN: example.com
+    ROLLOUT_RESOURCE_TYPE: deployment
     POSTGRES_USER: user
     POSTGRES_PASSWORD: testing-password
     POSTGRES_ENABLED: "true"
     POSTGRES_DB: $CI_ENVIRONMENT_SLUG
     POSTGRES_VERSION: 9.6.2
+
   script:
-    - download_k3s
-    - start_k3s
     - auto-deploy initialize_tiller
     - auto-deploy download_chart
     - auto-deploy deploy
